--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-	"name" : "gossi/swagger",
-	"description" : "A php library to manipulate swagger specifications",
+	"name" : "theinpu/gossi-swagger",
+	"description" : "A php library to manipulate swagger specifications (source - https://github.com/gossi/swagger)",
 	"type" : "library",
 	"license" : "MIT",
 	"authors" : [{
